# oxidian

./: # Oxidian — Plan de Implementación  .gitignore  .rules  Cargo.toml  README.md  init.md  plan1.md  skills-lock.json
assets/keymaps/: oxidian-default.json
assets/oxidian/: config.example.json
assets/settings/: default.json
crates/agent_settings/src/: agent_settings.rs
crates/ai_onboarding/src/: ai_onboarding.rs
crates/assets/src/: assets.rs
crates/dap/docs/: breakpoints.md
crates/dap/src/: debugger_settings.rs
crates/dap_adapters/: Cargo.toml
crates/dap_adapters/src/: dap_adapters.rs
crates/debug_adapter_extension/: Cargo.toml
crates/debug_adapter_extension/src/: debug_adapter_extension.rs
crates/debugger_tools/src/: debugger_tools.rs
crates/editor/: Cargo.toml
crates/editor/src/: navigation.rs
crates/feature_flags/src/: feature_flags.rs
crates/language_models/src/: language_models.rs
crates/languages/: Cargo.toml
crates/languages/src/: lib.rs  marksman.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: markdown.rs  parser.rs
crates/markdown_preview/: Cargo.toml
crates/markdown_preview/src/: markdown_preview_view.rs
crates/onboarding/src/: basics_page.rs  onboarding.rs
crates/oxidian_backlinks/: Cargo.toml
crates/oxidian_backlinks/src/: oxidian_backlinks.rs
crates/oxidian_core/: Cargo.toml
crates/oxidian_core/src/: oxidian_core.rs
crates/oxidian_daily/: Cargo.toml
crates/oxidian_daily/src/: oxidian_daily.rs
crates/oxidian_frontmatter/: Cargo.toml
crates/oxidian_frontmatter/src/: oxidian_frontmatter.rs
crates/oxidian_git/: Cargo.toml
crates/oxidian_git/src/: oxidian_git.rs
crates/oxidian_init/: Cargo.toml
crates/oxidian_init/src/: oxidian_init.rs
crates/oxidian_vault/: Cargo.toml
crates/oxidian_vault/src/: oxidian_vault.rs  parsing.rs  test_utils.rs
crates/paths/src/: paths.rs
crates/settings_content/src/: settings_content.rs
crates/settings_ui/: Cargo.toml
crates/settings_ui/src/: page_data.rs  pages.rs
crates/settings_ui/src/pages/: oxidian_panels.rs
crates/theme/src/: fallback_themes.rs  theme.rs
crates/ui/src/components/label/: label.rs
crates/workspace/src/: pane.rs  welcome.rs
crates/zed/: Cargo.toml  improve-markdown.md
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zed_actions/src/: lib.rs
docs/: README.md
docs/.conventions/: CONVENTIONS.md
docs/.conventions/brand-voice/: SKILL.md  rubric.md
docs/.doc-examples/: complex-feature.md  configuration.md  reference.md  simple-feature.md
docs/src/: SUMMARY.md  all-actions.md  command-palette.md  completions.md
docs/src/ai/: agent-panel.md  ai-improvement.md  configuration.md  edit-prediction.md  external-agents.md  inline-assistant.md  llm-providers.md  mcp.md  overview.md  parallel-agents.md  privacy-and-security.md  rules.md  skills.md  subscription.md  text-threads.md
docs/src/business/: organizations.md  overview.md
docs/src/collaboration/: contacts-and-private-calls.md
