[package]
name = "oxidian_git"
version = "0.2.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/oxidian_git.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true
oxidian_core = { workspace = true }
oxidian_vault = { workspace = true }
smol.workspace = true
ui.workspace = true
workspace = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
