[package]
name = "oxidian_init"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/oxidian_init.rs"
doctest = false

[dependencies]
fs.workspace = true
gpui.workspace = true
log.workspace = true
feature_flags.workspace = true
settings.workspace = true
workspace.workspace = true
oxidian_vault    = { path = "../oxidian_vault" }
oxidian_backlinks = { path = "../oxidian_backlinks" }
oxidian_daily    = { path = "../oxidian_daily" }
oxidian_frontmatter = { path = "../oxidian_frontmatter" }
