[package]
name = "oxidian_vault"
version = "0.2.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/oxidian_vault.rs"
doctest = false

[features]
test-support = [
    "db/test-support",
    "gpui/test-support",
]

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
collections.workspace = true
db.workspace = true
fs.workspace = true
gpui.workspace = true
log.workspace = true
oxidian_core = { path = "../oxidian_core" }
project.workspace = true
serde_json.workspace = true
smol.workspace = true
util.workspace = true
worktree.workspace = true
workspace = { path = "../workspace" }

[dev-dependencies]
db = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
